--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="profile">
             <img src="PXL_20230113_131459655.PORTRAIT-01.jpeg" alt="Mahmoud Emad">
             <h1>Mahmoud Emad</h1>
-            <p>Aspiring Junior Backend Developer</p>
+            <p>Junior Backend Developer</p>
             <div class="contact-info">
                 <p><strong>Location:</strong> Alexandria, Alagami</p>
                 <p><strong>Phone:</strong> 01021323899</p>
