--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <p>A blogging platform with administrative controls. Developed using PHP Laravel and MySQL. Key features: Post creation and editing, user management, comment system.</p>
                 </div>
                 <div class="project">
-                    <h3>School/University Program (Currently in development)</h3>
-                    <p>A comprehensive management system for educational institutions. Key features: Student management, course scheduling, grading system.</p>
+                    <h3>Agritopia</h3>
+                    <p>A website focused on courses, showcasing their offerings. The website was developed using PHP, MySQL, and a little JavaScript. It features an admin panel that allows the administrator to view user information (except passwords)</p>
                 </div>
             </div>
 
