--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 </div>
                 <div class="project">
                     <h3>Agritopia</h3>
-                    <p>A website focused on courses, showcasing their offerings. The website was developed using PHP, MySQL, and a little JavaScript. It features an admin panel that allows the administrator to view user information (except passwords)</p>
+                   <p>A website focused on courses, showcasing their offerings. The website was developed using PHP, MySQL, and a little JavaScript. It features an admin panel that allows the administrator to view user information (except passwords)</p>
+                     <a href="https://magritopia.wuaze.com/">Link to project</a>
                 </div>
             </div>
 
