--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
                    <p>A website focused on courses, showcasing their offerings. The website was developed using PHP, MySQL, and a little JavaScript. It features an admin panel that allows the administrator to view user information (except passwords)</p>
                      <a href="https://magritopia.wuaze.com/">Link to project</a>
                 </div>
+                 <div class="project">
+                    <h3>Vela Shop (Front-End Part Only)</h3>
+                    <p>The Vela project website showcases a fully responsive online shopping platform. It utilizes modern web development technologies, including HTML, CSS, and JavaScript. Key features include:
+                    Dynamic product listing with pagination for an improved user experience.
+                    Responsive design optimized for different screen sizes.
+                    Basic interactive features like a navigation menu and buttons for seamless browsing.
+                    Clean, minimalist user interface focused on ease of navigation and product discovery.</p>
+                     <a href="https://mgabal.github.io/velaproject/">Link to project</a>
+                </div>
+
                 <div class="project">
                     <h3>Blog App with Admin Panel (Currently in development)</h3>
                     <p>A blogging platform with administrative controls. Developed using PHP Laravel and MySQL. Key features: Post creation and editing, user management, comment system.</p>
